--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,31 @@
 name: Release
-'on':
-  workflow_run:
-    workflows:
-      - Test
-    branches:
-      - master
-    types:
-      - completed
-jobs:
+on:
   release:
-    name: Release
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    uses: escalate/github-actions-workflows/.github/workflows/release.yml@master
+    types:
+      - published
+
+jobs:
+  docker_build:
+    name: Build Docker Image and push to GitHub Container Registry
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.GHCR_USERNAME }}
+          password: ${{ secrets.GHCR_TOKEN }}
+      
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ${{ format('ghcr.io/{0}/aem-dispatcher-scanner:latest', vars.GHCR_USERNAME) }}
