--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,27 @@
-name: Test
-'on':
-  push:
-    branches:
-      - master
+name: Test on Pull Request
+on:
   pull_request:
+    types: [opened, reopened]
+ 
 jobs:
   test:
-    name: Test
-    uses: escalate/github-actions-workflows/.github/workflows/test.yml@master
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.12
+      
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      
+      - name: Run unit tests
+        run: |
+          python -m unittest
+    
