--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,12 +21,11 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ vars.GHCR_USERNAME }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ format('ghcr.io/{0}/aem-dispatcher-scanner:latest', vars.GHCR_USERNAME) }}
+          tags: ${{ format('{0}/aem-dispatcher-scanner:latest', vars.DOCKERHUB_USERNAME) }}
