--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Test on Pull Request
 on:
   pull_request:
-    types: [opened, reopened]
+    types: [opened, edited, reopened, synchronize]
  
 jobs:
   test:
@@ -24,4 +24,17 @@ jobs:
       - name: Run unit tests
         run: |
           python -m unittest
+  
+  docker_build:
+    name: Check if Docker Image can be built
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
     
