--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           push: true
           tags: 
-            - ${{ format('{0}/aem-dispatcher-scanner:latest', vars.DOCKER_USERNAME) }}
-            - ${{ format('{0}/aem-dispatcher-scanner:{1}', vars.DOCKER_USERNAME, github.event.release.tag_name) }}
+            ${{ format('{0}/aem-dispatcher-scanner:latest', vars.DOCKER_USERNAME) }}
+            ${{ format('{0}/aem-dispatcher-scanner:{1}', vars.DOCKER_USERNAME, github.event.release.tag_name) }}
